--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Página com a finalidade de exibir um contador">
+    <meta name="description" content="Pagina com a finalidade de exibir um contador">
     <meta name="keywords" content="Contador, adicionar, diminuir">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Alanis Ribeiro">
